--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,12 @@
-<h1>New Post</h1>
+<h1>Welcome to the TRANSLATRON</h1>
 
-<% @users each do |u| %>
+<% @users.each do |u| %>
 
-<%= 'User id: ' u.id + 'name: ' + u.name + 'language: ' + u.language %>
+<%= 'User id: ' + u.id %> 
+<%= 'name: ' + u.name %>
+<%= 'language: ' + u.language %>
+<%= 'Play as this user?' %>
 
 <% end %>
+
+<%= link_to 'Create a new user', new_users_path, class: "btn btn-info" %>
