Edit view is updated

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,9 +6,7 @@
  
   <p>
     <%= f.label :language %><br>
-    <%= f.select :language, [
-	['English','english'],['Chinese','chinese'],['Spanish','spanish'],['Japanese','japanese'],['German','german']
-	] %>
+    <%= f.select :language, 		[['English','english'],['Chinese','chinese'],['Spanish','spanish'],['Japanese','japanese'],['German','german']] %>
   </p>
  
   <p>
