--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @users.each do |u| %>
 
-<p><%= 'User id: ' + u.id.to_s + ' Name: ' + u.name + ' Language: ' + u.language %></p>
+<p><%= 'User id: ' + u.id.to_s + ' - Name: ' + u.name + ' - Language: ' + u.language %></p>
 <p><%= link_to 'Play as this user?', {controller: 'users', action: 'show', id: u} %> -
    <%= link_to 'Edit', {controller: 'users', action: 'edit', id: u} %> -
    <%= link_to 'Destroy', {controller: 'users', action: 'destroy', id: u}, method: :delete %></p>
