--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,3 +6,15 @@
 <p>Send a message</p>
 <p>Current language is <%= @user.language %>. <%= link_to 'Change language?', {controller: 'users', action: 'edit', id: @user} %></p>
 <p><%= link_to 'Back', {controller: 'users', action: 'index'} %></p>
+
+<p>Message Bank</p>
+<p>
+	<% @user.messages.each do |message| %>
+	<% if @user == message.sender %>
+	<%= 'Sent to ' + message.receiver + " @" + message.timestamps + ' ' link_to 'View', {controller: 'messages' action: 'show', id: message }%>
+	<% elsif @user == message.receiver %>
+	<%= 'Received from ' + message.sender + " @" + message.timestamps + ' ' link_to 'View', {controller: 'messages' action: 'show', id: message } %>
+	<% end %>
+</p>
+	
+
