--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <%= form_for :user, url: {action: 'update', id: @user}, method: :patch do |f| %>
   <% if @user.errors.any? %>
   <div id="error_explanation">
@@ -10,18 +12,20 @@
     </ul>
   </div>
   <% end %>
-  <p>
-    <%= f.label :name %><br>
-  </p>
+    <h1><%= f.label :name, @user.name %></h1>
  
-  <p>
-    <%= f.label :language %><br>
-    <%= f.select :language, 		[['English','english'],['Chinese','chinese'],['Spanish','spanish'],['Japanese','japanese'],['German','german']] %>
-  </p>
+    <div class="form-group">
+  		<%= f.label :language %>
+  		<div class="input-group">
+        	  <%= f.select :language, [['English','en'],['Chinese','cn'],['Spanish','es'],['Japanese','jp'],['German','de']] %>
+    	</div>
+    </div>
  
-  <p>
-    <%= f.submit %>
-  </p>
+  <div class="form-group">
+    <%= f.submit class: 'btn btn-primary' %>
+  </div>
 <% end %>
  
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path, class: 'btn btn-default' %>
+
+</div>
