--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,22 +1,25 @@
+<div class="container">
+
 <%= form_for :message, url: { action: 'create' } do |f| %>
-  <p>
-    <%= f.label :sender %><br>
-	<%= f.label :sender, @sender.name %>
-	<%= f.label :sender_id, @sender.id %>
-    <%= f.hidden_field :sender_id, :value => @sender.id %>
-  </p>
-  <p>
-    <%= f.label :receiver %><br>
-    <%= f.select :receiver_id, users_for_select, :prompt => 'Select' %>
-  </p>
+	<div class="form-group">
+    	<h1>Sender</h1>
+		<%= f.label :sender, @sender.name %>
+		<%= f.label :sender_id, @sender.id %>
+    	<%= f.hidden_field :sender_id, :value => @sender.id %>
+	</div>
+	<div class="form-group">
+    	<%= f.label :receiver %><br>
+    	<%= f.select :receiver_id, users_for_select, :prompt => 'Select' %>
+	</div>
+	<div class="form-group">
+    	<%= f.label :text %><br>
+		<%= f.text_area :text, size: "50x10" %>
+	</div>
  
-  <p>
-    <%= f.label :text %><br>
-	<%= f.text_area :text, size: "50x10" %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
+	<div class="form-group">
+    	<%= f.submit class: 'btn btn-primary' %>
+	</div>
 <% end %>
-<%= link_to 'Back', url: { controller: 'users', action: 'show', id: @message.sender_id } %>
+<%= link_to 'Back', users_path(id: @user), class: 'btn btn-default' %>
+
+</div>
